images issue resolved

--- a/html/kids.html
+++ b/html/kids.html
@@ -211,7 +211,7 @@
       <div class="row  row-cols-lg-4  g-4">
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/b1.webp" class="card-img-top" alt="...">
+            <img src="/images/b1.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys casual shirt pant </h5>
               <p class="card-text"> <h3> ₹357 </h3> <p class="cut">₹699</p> 48% off</p>
@@ -221,7 +221,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/b2.webp" class="card-img-top" alt="...">
+            <img src="/images/b2.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys casual shirt short</h5>
               <p class="card-text">
@@ -233,7 +233,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/b3.webp" class="card-img-top" alt="...">
+            <img src="/images/b3.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys army shirt pant &cap </h5>
               <p class="card-text">
@@ -244,7 +244,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/b4.webp" class="card-img-top" alt="...">
+            <img src="/images/b4.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys festive t-shirt pant </h5>
               <p class="card-text"> <h3> ₹494 </h3> <p class="cut">₹700</p> 59% off.</p>
@@ -254,7 +254,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/b5.webp" class="card-img-top" alt="...">
+            <img src="/images/b5.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys party dresscoat pant </h5>
               <p class="card-text"> <h3> ₹799 </h3> <p class="cut">₹1499</p> 64% off</p>
@@ -264,7 +264,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/b6.webp" class="card-img-top" alt="...">
+            <img src="/images/b6.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys party waistcoat pant </h5>
               <p class="card-text"> <h3> ₹849 </h3> <p class="cut">₹1999</p> 57% off</p>
@@ -274,7 +274,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/b7.webp" class="card-img-top" alt="...">
+            <img src="/images/b7.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys party waistcoat pant with tie  </h5>
               <p class="card-text"> <h3> ₹799</h3> <p class="cut">₹2499</p> 63% off</p>
@@ -284,7 +284,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/b8.webp" class="card-img-top" alt="...">
+            <img src="/images/b8.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys party waistcoat pant</h5>
               <p class="card-text"> <h3> ₹649 </h3> <p class="cut">₹899</p> 30% off</p>
@@ -294,7 +294,7 @@
         </div>
          <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/b9.webp" class="card-img-top" alt="...">
+            <img src="/images/b9.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys casual t-shirt track pants </h5>
               <p class="card-text"> <h3> ₹479 </h3> <p class="cut">₹1499</p> 68% off</p>
@@ -304,7 +304,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3 ">
-            <img src="/images/kidswear/b10.webp" class="card-img-top" alt="...">
+            <img src="/images/b10.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys western one piece coat </h5>
               <p class="card-text"> <h3> ₹849 </h3> <p class="cut">₹1499</p> 37% off</p>
@@ -314,7 +314,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/b11.webp" class="card-img-top" alt="...">
+            <img src="/images/b11.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys 3piece coat pant </h5>
               <p class="card-text"> <h3> ₹1189 </h3> <p class="cut">₹3999</p> 70% off</p>
@@ -324,7 +324,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/b12.webp" class="card-img-top" alt="...">
+            <img src="/images/b12.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys casual trends t-shirts </h5>
               <p class="card-text"> <h3> ₹449  </h3> <p class="cut">₹897</p> 65% off</p>
