--- a/html/mens.html
+++ b/html/mens.html
@@ -83,7 +83,7 @@
       <div class="row  row-cols-lg-4  g-4">
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/m1.webp" class="card-img-top" alt="...">
+            <img src="/images/m1.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys casual shirt </h5>
               <p class="card-text"> <h3> ₹357 </h3> <p class="cut">₹699</p> 48% off</p>
@@ -93,7 +93,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/m2.webp" class="card-img-top" alt="...">
+            <img src="/images/m2.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Boys casual shirt </h5>
               <p class="card-text">
@@ -105,7 +105,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/m3.webp" class="card-img-top" alt="...">
+            <img src="/images/m3.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Men Printed Round Neck Dark Green T-Shirt </h5>
               <p class="card-text">
@@ -116,7 +116,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/m4.webp" class="card-img-top" alt="...">
+            <img src="/images/m4.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Men Self Design Pure Cotton Straight Kurta  </h5>
               <p class="card-text"> <h3> ₹494 </h3> <p class="cut">₹700</p> 59% off.</p>
@@ -126,7 +126,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/m5.webp" class="card-img-top" alt="...">
+            <img src="/images/m5.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Men Slim Fit Checkered Mandarin Collar Casual Shirt </h5>
               <p class="card-text"> <h3> ₹799 </h3> <p class="cut">₹1499</p> 64% off</p>
@@ -136,7 +136,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/m6.webp" class="card-img-top" alt="...">
+            <img src="/images/m6.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Men Slim Fit Black Lycra Blend Trousers </h5>
               <p class="card-text"> <h3> ₹849 </h3> <p class="cut">₹1999</p> 57% off</p>
@@ -146,7 +146,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/m7.webp" class="card-img-top" alt="...">
+            <img src="/images/m7.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pack of 4 Men Solid Round Neck Silver, Blue, Black, Grey T-Shirt </h5>
               <p class="card-text"> <h3> ₹799</h3> <p class="cut">₹2499</p> 63% off</p>
@@ -156,7 +156,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/m8.webp" class="card-img-top" alt="...">
+            <img src="/images/m8.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Men Solid Henley Neck Dark Blue T-Shirt</h5>
               <p class="card-text"> <h3> ₹649 </h3> <p class="cut">₹899</p> 30% off</p>
@@ -166,7 +166,7 @@
         </div>
          <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/m9.webp" class="card-img-top" alt="...">
+            <img src="/images/m9.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Men Color Block Round Neck Grey T-Shirt</h5>
               <p class="card-text"> <h3> ₹479 </h3> <p class="cut">₹1499</p> 68% off</p>
@@ -176,7 +176,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3 ">
-            <img src="/images/kidswear/m10.webp" class="card-img-top" alt="...">
+            <img src="/images/m10.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Men Printed Hooded Neck Red T-Shirt</h5>
               <p class="card-text"> <h3> ₹849 </h3> <p class="cut">₹1499</p> 37% off</p>
@@ -186,7 +186,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/m11.webp" class="card-img-top" alt="...">
+            <img src="/images/m11.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Men Regular Fit Black Cotton Blend Trousers</h5>
               <p class="card-text"> <h3> ₹1189 </h3> <p class="cut">₹3999</p> 70% off</p>
@@ -196,7 +196,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/m12.webp" class="card-img-top" alt="...">
+            <img src="/images/m12.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Men Slim Fit Checkered Spread Collar Casual Shirt</h5>
               <p class="card-text"> <h3> ₹449  </h3> <p class="cut">₹897</p> 65% off</p>
