html msg resolved

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="html/womens.html">Womens</a>
+            <a class="nav-link active" aria-current="page" href="womens.html">Womens</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="html/mens.html">Mens</a>
+            <a class="nav-link active" href="mens.html">Mens</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="html/kids.html">kids</a>
+            <a class="nav-link active" href="kids.html">kids</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -38,7 +38,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#"> Top Trendings</a></li>
-              <li><a class="dropdown-item" href="html/sale.html">On Discounts</a>
+              <li><a class="dropdown-item" href="sale.html">On Discounts</a>
               </li>
               <li>
                 <a class="dropdown-item" href="#">Home & Living</a>
@@ -88,7 +88,7 @@
     <div class="row row-cols-1 row-cols-4 g-4">
       <div class="col-lg-3 col-md-4 col-6 text-center">
         <div class="card text-bg-secondary">
-          <a href="html/kids.html">
+          <a href="kids.html">
             <img src="images/kids-wear.jpg" class="card-img-top" alt="...">
             <div class="card-body">
           </a>
@@ -98,7 +98,7 @@
     </div>
     <div class="col-lg-3 col-md-4 col-6 text-center">
       <div class="card text-bg-secondary">
-        <a href="html/mens.html">
+        <a href="mens.html">
           <img src="images/menswear (1).jpeg" class="card-img-top" alt="...">
           <div class="card-body">
         </a>
@@ -108,7 +108,7 @@
     </div>
     <div class="col-lg-3 col-md-4 col-6 text-center">
       <div class="card text-bg-secondary">
-        <a href="html/womens.html">
+        <a href="womens.html">
           <img src="images/womenswear (1).jpg" class="card-img-top" alt="...">
           <div class="card-body">
         </a>
@@ -118,7 +118,7 @@
     </div>
     <div class="col-lg-3 col-md-4 col-6 text-center">
       <div class="card text-bg-secondary">
-        <a href="html/sale.html">
+        <a href="sale.html">
           <img src="images/sale (1).jpg" class="card-img-top" alt="...">
           <div class="card-body">
         </a>
@@ -160,7 +160,7 @@
     <div class="row row-cols-1 row-cols-4 g-4">
       <div class="col-lg-3 col-md-4 col-6 text-center">
         <div class="card text-bg-secondary">
-          <a href="html/kids.html">
+          <a href="kids.html">
             <img src="images/kids-wear.jpg" class="card-img-top" alt="...">
             <div class="card-body">
           </a>
@@ -170,7 +170,7 @@
     </div>
     <div class="col-lg-3 col-md-4 col-6 text-center">
       <div class="card text-bg-secondary">
-        <a href="html/mens.html">
+        <a href="mens.html">
           <img src="images/menswear (1).jpeg" class="card-img-top" alt="...">
           <div class="card-body">
         </a>
@@ -180,7 +180,7 @@
     </div>
     <div class="col-lg-3 col-md-4 col-6 text-center">
       <div class="card text-bg-secondary">
-        <a href="html/womens.html">
+        <a href="womens.html">
           <img src="images/womenswear (1).jpg" class="card-img-top" alt="...">
           <div class="card-body">
         </a>
@@ -190,7 +190,7 @@
     </div>
     <div class="col-lg-3 col-md-4 col-6 text-center">
       <div class="card text-bg-secondary">
-        <a href="html/sale.html">
+        <a href="sale.html">
           <img src="images/traditional.jpg" class="card-img-top" alt="...">
           <div class="card-body">
         </a>
