--- a/kids.html
+++ b/kids.html
@@ -93,7 +93,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/img2.webp" class="card-img-top" alt="...">
+            <img src="images/kidswear/img2.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Girls Midi/Knee Length Party Dress</h5>
               <p class="card-text">
