--- a/kids.html
+++ b/kids.html
@@ -83,7 +83,7 @@
       <div class="row  row-cols-lg-4  g-4">
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/img1.webp" class="card-img-top" alt="...">
+            <img src="images/img1.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Midi/Knee Length Casual Dress</h5>
               <p class="card-text"> <h3> ₹239 </h3> <p class="cut">₹286</p> 20% off</p>
@@ -93,7 +93,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="images/kidswear/img2.webp" class="card-img-top" alt="...">
+            <img src="images/img2.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Girls Midi/Knee Length Party Dress</h5>
               <p class="card-text">
@@ -105,7 +105,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/img3.webp" class="card-img-top" alt="...">
+            <img src="images/img3.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Girls Maxi/Full Length Festive/Wedding Dress </h5>
               <p class="card-text">
@@ -116,7 +116,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/img4.webp" class="card-img-top" alt="...">
+            <img src="images/img4.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Midi/Knee Length Casual Dress</h5>
               <p class="card-text"> <h3> ₹259 </h3> <p class="cut">₹397</p> 65% off.</p>
@@ -126,7 +126,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/img5.webp" class="card-img-top" alt="...">
+            <img src="images/img5.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Midi/Knee Length Casual Dress</h5>
               <p class="card-text"> <h3> ₹241 </h3> <p class="cut">₹397</p> 65% off</p>
@@ -136,7 +136,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/img6.webp" class="card-img-top" alt="...">
+            <img src="images/img6.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Midi/Knee Length Casual Dress</h5>
               <p class="card-text"> <h3> ₹249 </h3> <p class="cut">₹419</p> 67% off</p>
@@ -146,7 +146,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/img7.webp" class="card-img-top" alt="...">
+            <img src="images/img7.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Girls Maxi/Full Length Festive/Wedding Dress </h5>
               <p class="card-text"> <h3> ₹499</h3> <p class="cut">₹799</p> 46% off</p>
@@ -156,7 +156,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/img8.webp" class="card-img-top" alt="...">
+            <img src="images/img8.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Full Length Festive/Wedding Dress</h5>
               <p class="card-text"> <h3> ₹649 </h3> <p class="cut">₹899</p> 30% off</p>
@@ -166,7 +166,7 @@
         </div>
          <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/img9.webp" class="card-img-top" alt="...">
+            <img src="images/img9.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Girls Calf Length Party Dress </h5>
               <p class="card-text"> <h3> ₹459 </h3> <p class="cut">₹599</p> 20% off</p>
@@ -176,7 +176,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3 ">
-            <img src="/images/kidswear/img10.webp" class="card-img-top" alt="...">
+            <img src="images/img10.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Full Length Festive/Wedding Dress</h5>
               <p class="card-text"> <h3> ₹599 </h3> <p class="cut">₹899</p> 30% off</p>
@@ -186,7 +186,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/img11.webp" class="card-img-top" alt="...">
+            <img src="images/img11.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">White short leg dress </h5>
               <p class="card-text"> <h3> ₹329 </h3> <p class="cut">₹459</p> 25% off</p>
@@ -196,7 +196,7 @@
         </div>
         <div class="col col-lg-3 col-md-4 col-6">
           <div class="card h-100 border-success border-3">
-            <img src="/images/kidswear/img12.webp" class="card-img-top" alt="...">
+            <img src="images/img12.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Girls Calf Length Party Dress </h5>
               <p class="card-text"> <h3> ₹241 </h3> <p class="cut">₹397</p> 65% off</p>
