--- a/mens.html
+++ b/mens.html
@@ -33,13 +33,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/html/womens.html">Womens</a>
+                <a class="nav-link active" aria-current="page" href="/womens.html">Womens</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/html/mens.html">Mens</a>
+                <a class="nav-link active" href="/mens.html">Mens</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/html/kids.html">kids</a>
+                <a class="nav-link active" href="/kids.html">kids</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -53,7 +53,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#"> Top Trendings</a></li>
-                  <li><a class="dropdown-item" href="/html/sale.html">On Discounts</a>
+                  <li><a class="dropdown-item" href="/sale.html">On Discounts</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="#">Home & Living</a>
