--- a/kids.html
+++ b/kids.html
@@ -343,6 +343,21 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous">
   </script>
-  <script src="/kid.js"></script>
+  <script>
+    var addToCartButtons = document.querySelectorAll('.card button');
+
+addToCartButtons.forEach(function(button) {
+  button.addEventListener('click', addToCartClicked);
+});
+
+function addToCartClicked(event) {
+  var button = event.target;
+  var card  = button.parentElement;
+  var productName = card.querySelector('h5').innerText;
+  var productPrice = card.querySelector('h3').innerText;
+  alert("Added to cart: " + productName + " " + productPrice);
+}
+
+  </script>
 </body>
 </html>
